SERVER-15523 cleanup initial connection in Config::reloadSettings